[tool.poetry]
name = "personalwebsite"
version = "0.1.0"
description = ""
authors = ["John Eastman <john@bee-haven.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.25.0"
streamlit-lottie = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
